--- a/flask/app/templates/bgp.html
+++ b/flask/app/templates/bgp.html
@@ -289,7 +289,7 @@
         <!-- footer content -->
         <footer>
           <div class="pull-right">
-            <a href="https://github.com/rhicks/bgp-dashboard">BGP Dashboard</a> at Github</a>
+            <a href="https://github.com/rhicks/bgp-dashboard">BGP Dashboard</a> at Github
             <div class="clearfix"></div>
             <a href="https://github.com/puikinsh/gentelella">Gentelella</a> - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
           </div>
